// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering default 1`] = `
<span
  className="toggle-switch simple-toggle-switch"
>
  <span
    className="toggle-switch-check-bar"
  >
    <input
      checked={false}
      className="toggle-switch-check"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="toggle-switch-bar"
    >
      <span
        className="toggle-switch-handle"
      />
    </span>
  </span>
</span>
`;

exports[`Rendering inside radiogroup 1`] = `
<div
  className=""
>
  <span
    className="toggle-switch simple-toggle-switch"
  >
    <span
      className="toggle-switch-check-bar"
    >
      <input
        checked={true}
        className="toggle-switch-check"
        onChange={[Function]}
        type="radio"
        value="foo"
      />
      <span
        aria-hidden="true"
        className="toggle-switch-bar"
      >
        <span
          className="toggle-switch-handle"
        />
      </span>
    </span>
    <span
      className="toggle-switch-label"
    >
      Foo
    </span>
  </span>
  <span
    className="toggle-switch simple-toggle-switch"
  >
    <span
      className="toggle-switch-check-bar"
    >
      <input
        checked={false}
        className="toggle-switch-check"
        onChange={[Function]}
        type="radio"
        value="bar"
      />
      <span
        aria-hidden="true"
        className="toggle-switch-bar"
      >
        <span
          className="toggle-switch-handle"
        />
      </span>
    </span>
    <span
      className="toggle-switch-label"
    >
      Bar
    </span>
  </span>
  <span
    className="toggle-switch simple-toggle-switch"
  >
    <span
      className="toggle-switch-check-bar"
    >
      <input
        checked={false}
        className="toggle-switch-check"
        onChange={[Function]}
        type="radio"
        value="baz"
      />
      <span
        aria-hidden="true"
        className="toggle-switch-bar"
      >
        <span
          className="toggle-switch-handle"
        />
      </span>
    </span>
    <span
      className="toggle-switch-label"
    >
      Baz
    </span>
  </span>
</div>
`;

exports[`Rendering w/ disabled 1`] = `
<span
  className="toggle-switch simple-toggle-switch disabled"
>
  <span
    className="toggle-switch-check-bar"
  >
    <input
      checked={false}
      className="toggle-switch-check"
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="toggle-switch-bar"
    >
      <span
        className="toggle-switch-handle"
      />
    </span>
  </span>
</span>
`;

exports[`Rendering w/ symbol 1`] = `
<span
  className="toggle-switch simple-toggle-switch"
>
  <span
    className="toggle-switch-check-bar"
  >
    <input
      checked={false}
      className="toggle-switch-check"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="toggle-switch-bar"
    >
      <span
        className="toggle-switch-handle"
      >
        <span
          className="button-icon button-icon-on toggle-switch-icon"
        >
          <svg
            className="lexicon-icon lexicon-icon-check"
            role="presentation"
          >
            <use
              xlinkHref="/foo.svg#check"
            />
          </svg>
        </span>
        <span
          className="button-icon button-icon-off toggle-switch-icon"
        >
          <svg
            className="lexicon-icon lexicon-icon-times"
            role="presentation"
          >
            <use
              xlinkHref="/foo.svg#times"
            />
          </svg>
        </span>
      </span>
    </span>
  </span>
</span>
`;
